SERVER-12997 Better error message for oversized insert